# UnoGame

./: BotPlayer.cpp  BotPlayer.h  CMakeLists.txt  Card.h  HumanPlayer.cpp  HumanPlayer.h  Manager.cpp  Manager.h  NumberCard.cpp  NumberCard.h  Player.cpp  Player.h  README.md  SlowPrint.cpp  SlowPrint.h  UNO.cpp  actioncard.cpp  actioncard.h  card.cpp  deck.cpp  deck.h  main.cpp  wild.cpp  wild.h  wilddrawfour.cpp  wilddrawfour.h
